--- a/index.html
+++ b/index.html
@@ -182,13 +182,12 @@
               </div>
             </div>
 
-            <div class="d-flex flex-wrap gap-1 mb-4">
-              <a href="#" class="btn btn-gradient mt-3 mb-3">
+            <div class="d-flex flex-nowrap gap-2 mb-4 mt-2">
+              <a href="#" class="btn btn-gradient px-3">
                 <i class="fas fa-download me-2"></i>Download CV
               </a>
-              <a href="contact.html" class="btn btn-gradient mt-3 mb-3">
-                <i class="fa fa-address-book me-2" aria-hidden="true"></i>
-                Contact Us
+              <a href="contact.html" class="btn btn-gradient px-3">
+                <i class="fa fa-address-book me-2"></i>Contact Us
               </a>
             </div>
           </div>
@@ -355,7 +354,9 @@
           <div class="swiper-wrapper">
             <!-- CARD 1 -->
             <div class="swiper-slide">
-              <div class="card testimonial-hover testimonial-card shadow-sm text-dark">
+              <div
+                class="card testimonial-hover testimonial-card shadow-sm text-dark"
+              >
                 <div class="card-body p-4 d-flex flex-column h-100">
                   <div class="rating text-end mb-2 mt-2">
                     <i class="fas fa-star text-warning"></i
@@ -583,7 +584,7 @@
     </section>
 
     <footer class="footer text-light bg-dark pt-5 pb-4">
-      <div class="container">
+      <div class="container mb-4">
         <div class="row gy-4">
           <!-- About / Bio -->
           <div class="col-lg-4 col-md-6">
@@ -641,15 +642,14 @@
               latest tech news, tips, and resources—straight to your inbox.
             </p>
             <div class="row">
-              <form class="flex-column flex-sm-row">
+              <form class="d-flex flex-column align-items-stretch w-100">
                 <input
                   type="email"
-                  class="form-control me-sm-2 mb-2 mb-sm-0 mb-3"
+                  class="form-control mb-2"
                   placeholder="Your Email"
                 />
-                <br />
-                <button type="submit" class="btn btn-primary">
-                  <i class="fas fa-paper-plane me-1"></i>Subscribe
+                <button type="submit" class="btn btn-primary w-100">
+                  <i class="fas fa-paper-plane me-1"></i> Subscribe
                 </button>
               </form>
             </div>
