--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
             </div>
 
             <div
-              class="d-flex flex-nowrap justify-content-center gap-2 mb-4 mt-2"
+              class="d-flex flex-nowrap gap-2 mb-4 mt-2"
             >
               <a href="#" class="btn btn-gradient px-3">
                 <i class="fas fa-download me-2"></i>Download CV
