--- a/projects.html
+++ b/projects.html
@@ -352,7 +352,7 @@
     </section>
 
     <footer class="footer text-light bg-dark pt-5 pb-4">
-      <div class="container">
+      <div class="container mb-4">
         <div class="row gy-4">
           <!-- About / Bio -->
           <div class="col-lg-4 col-md-6">
@@ -406,20 +406,18 @@
           <div class="col-lg-4 col-md-6">
             <h6 class="text-uppercase mb-3">Subscribe to My Newsletter</h6>
             <p class="small">
-              Stay informed with exclusive project
-              updates and insights. Get the latest tech news, tips, and
-              resources—straight to your inbox.
+              Stay informed with exclusive project updates and insights. Get the
+              latest tech news, tips, and resources—straight to your inbox.
             </p>
             <div class="row">
-              <form class="flex-column flex-sm-row">
+              <form class="d-flex flex-column align-items-stretch w-100">
                 <input
                   type="email"
-                  class="form-control me-sm-2 mb-2 mb-sm-0 mb-3"
+                  class="form-control mb-2"
                   placeholder="Your Email"
                 />
-                <br />
-                <button type="submit" class="btn btn-primary">
-                  <i class="fas fa-paper-plane me-1"></i>Subscribe
+                <button type="submit" class="btn btn-primary w-100">
+                  <i class="fas fa-paper-plane me-1"></i> Subscribe
                 </button>
               </form>
             </div>
