--- a/services.html
+++ b/services.html
@@ -584,7 +584,7 @@
     </section>
     <!-- Footer -->
     <footer class="footer text-light bg-dark pt-5 pb-4">
-      <div class="container">
+      <div class="container mb-4">
         <div class="row gy-4">
           <!-- About / Bio -->
           <div class="col-lg-4 col-md-6">
@@ -642,15 +642,14 @@
               latest tech news, tips, and resources—straight to your inbox.
             </p>
             <div class="row">
-              <form class="flex-column flex-sm-row">
+              <form class="d-flex flex-column align-items-stretch w-100">
                 <input
                   type="email"
-                  class="form-control me-sm-2 mb-2 mb-sm-0 mb-3"
+                  class="form-control mb-2"
                   placeholder="Your Email"
                 />
-                <br />
-                <button type="submit" class="btn btn-primary">
-                  <i class="fas fa-paper-plane me-1"></i>Subscribe
+                <button type="submit" class="btn btn-primary w-100">
+                  <i class="fas fa-paper-plane me-1"></i> Subscribe
                 </button>
               </form>
             </div>
