--- a/about.html
+++ b/about.html
@@ -115,9 +115,7 @@
               </div>
             </div>
 
-            <div
-              class="d-flex flex-nowrap gap-2 mb-4 mt-2"
-            >
+            <div class="d-flex flex-nowrap gap-2 mb-4 mt-2">
               <a href="#" class="btn btn-gradient px-3">
                 <i class="fas fa-download me-2"></i>Download CV
               </a>
@@ -630,7 +628,7 @@
     </section>
 
     <footer class="footer text-light bg-dark pt-5 pb-4">
-      <div class="container">
+      <div class="container mb-4">
         <div class="row gy-4">
           <!-- About / Bio -->
           <div class="col-lg-4 col-md-6">
@@ -688,15 +686,14 @@
               latest tech news, tips, and resources—straight to your inbox.
             </p>
             <div class="row">
-              <form class="flex-column flex-sm-row">
+              <form class="d-flex flex-column align-items-stretch w-100">
                 <input
                   type="email"
-                  class="form-control me-sm-2 mb-2 mb-sm-0 mb-3"
+                  class="form-control mb-2"
                   placeholder="Your Email"
                 />
-                <br />
-                <button type="submit" class="btn btn-primary">
-                  <i class="fas fa-paper-plane me-1"></i>Subscribe
+                <button type="submit" class="btn btn-primary w-100">
+                  <i class="fas fa-paper-plane me-1"></i> Subscribe
                 </button>
               </form>
             </div>
